# Supermod

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  Supermod.py  Supermod_1.0.py  album_class.py  discord_country_flags.py  main.py  newsletter.py  pyproject.toml  releases.py  requirements.txt  run_bot.py
.secrets/: .env.example
album_classes/: __init__.py  album.py  classes_utils.py  release.py  sub.py
classes/: album_class.py  release_class.py  submission_class.py
data/: discord_country_flags.py  genres.py
features/: promotions.py  qotd.py  releases.py  submissions.py  submissions_status.py  utils.py
features/general/: __init__.py  general.py  general_constants.py
features/newsletter/: __init__.py  news_constants.py  news_utils.py  newsletter.py
features/promotions/: __init__.py  promo_constants.py  promo_utils.py  promotions.py
features/qotd/: __init__.py  qotd.py  qotd_constants.py  qotd_utils.py
features/submissions/: __init__.py  submissions.py  subs_constants.py  subs_utils.py
features/submissions_status/: __init__.py  submissions_status.py  subs_status_constants.py
mode_switch/: __init__.py  mode_setup.py
src/supermod/: __init__.py  __main__.py  _logging.py  _mode_setup.py  _paths.py  _utils.py  bot.py
supermod/: Supermod.py  __init__.py  _supermod.py  paths.py  utils.py
supermod/album_classes/: __init__.py  album.py  release.py  sub.py
supermod/data/: discord_country_flags.py
supermod/mode_switch/: __init__.py  mode_setup.py
tests/: conftest.py  fakes.py
tests/unit/: test_album_classes.py  test_core.py  (+4 more)
(+50 files in other folders)
